<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <LinearLayout
        android:id="@+id/chatToolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/chatInfoBackward"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="backward icon"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/round_arrow_back_ios_new_white_24dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/chatInfoTitle"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:scaleType="centerInside"
            android:visibility="invisible"
            app:srcCompat="@drawable/outline_info_white_24dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatToolbarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chatInfoMembersView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/chatNameLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/chatinfo_bar_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/chatinfo_bar_padding_horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chatGroupName"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/chatName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="学习的胖"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/baseline_keyboard_arrow_right_grey_600_24dp" />
            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/chatinfo_bar_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/chatinfo_bar_padding_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chatGroupIcon"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="0"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/avatar11" />
            </LinearLayout>

            <View
                android:id="@+id/view9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/chatSearchLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/chatinfo_bar_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/chatinfo_bar_padding_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chatSearch"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/baseline_keyboard_arrow_right_grey_600_24dp" />
            </LinearLayout>

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/chatMuteLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/chatinfo_bar_height"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/chatinfo_bar_padding_horizontal">

                <Switch
                    android:id="@+id/chatSwitchMute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chatMute"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/chatPinLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/chatinfo_bar_height"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/chatinfo_bar_padding_horizontal">

                <Switch
                    android:id="@+id/chatSwitchPin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chatPin"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/chatLeaveLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/chatinfo_bar_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/chatinfo_bar_padding_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/round_logout_red_36dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/chatinfo_bar_height"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/chatLeave"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>